# iseq

./: .gitignore  Cargo.toml  Readme.md
gendata/: Cargo.toml
gendata/src/: args.rs  calcium.rs  consts.rs  lib.rs  main.rs  random.rs
iseq/: Cargo.toml
iseq-linalg/: Cargo.toml
iseq-linalg/src/: assert.rs  corr.rs  cost.rs  error.rs  heap.rs  lambda.rs  lib.rs  random.rs  stats.rs  traits.rs  update.rs  utils.rs
iseq/src/: args.rs  env.rs  env_mpi.rs  io.rs  iseq.rs  lib.rs  main.rs  mpi.rs  result.rs  time.rs  traits.rs
